    for more details.
  * Added experimental support for Yahoo! Mail IMAP when connecting to
    imap.mail.yahoo.com or imap-ssl.mail.yahoo.com. See the README for caveats
    and known issues.
  * Folders are now copied recursively by default.
  * Progress information is now displayed regularly while scanning large
    mailboxes.
  * Added --sync-flags option to synchronize message flags (like Seen, Flagged,
    etc.) from the source server to the destination server for messages that
    already exist on the destination.
  * Added short versions of common command-line options.
  * The --fast-scan option has been removed.
  * The --to-folder option can now be used in conjunction with --all or
    --all-subscribed to copy messages from multiple source folders to a single
    destination folder.
  * More concise log messages to reduce visual clutter in the log.
  * Fixed encoding issues when creating mailboxes and getting mailbox lists.
  * Fixed incorrect case-sensitive treatment of the 'INBOX' folder name.
  * Fixed a bug in which Larch would try to copy flags that weren't supported on
    the destination server.
  * Fixed an issue when trying to copy a folder with leading or trailing
    whitespace in the name to Gmail, since Gmail doesn't allow whitespace around
    folder names.

Version 1.0.2 (2009-08-05)
  * Fixed a bug that caused Larch to try to set the read-only \Recent flag on
    the destination server.

Version 1.0.1 (2009-05-10)
  * Ruby 1.9.1 support.
  * Much more robust handling of unexpected server disconnects and dropped
    connections.
  * Added --all option to copy all folders recursively.
  * Added --all-subscribed option to copy all subscribed folders recursively.
  * Added --dry-run option to simulate changes without actually making them.
  * Added --exclude and --exclude-file options to specify folders that should
    not be copied.
  * Added --ssl-certs option to specify a bundle of trusted SSL certificates.