@@ -10,7 +10,7 @@ require 'larch/version'
 
 gemspec = Gem::Specification.new do |s|
   s.name     = 'larch'
-  s.summary  = 'Larch syncs messages from one IMAP server to another. Awesomely.'
+  s.summary  = 'Larch copies messages from one IMAP server to another. Awesomely.'
   s.version  = "#{Larch::APP_VERSION}"
   s.author   = "#{Larch::APP_AUTHOR}"
   s.email    = "#{Larch::APP_EMAIL}"
