@@ -1,9 +1,9 @@
 module Larch
   APP_NAME      = 'Larch'
-  APP_VERSION   = '1.1.0.dev.20100120'
+  APP_VERSION   = '1.1.0.dev.20100206'
   APP_AUTHOR    = 'Ryan Grove'
   APP_EMAIL     = 'ryan@wonko.com'
   APP_URL       = 'http://github.com/rgrove/larch/'
-  APP_COPYRIGHT = 'Copyright (c) 2009 Ryan Grove <ryan@wonko.com>. All ' <<
+  APP_COPYRIGHT = 'Copyright (c) 2010 Ryan Grove <ryan@wonko.com>. All ' <<
                   'rights reserved.'
 end
